--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,7 @@ button:hover {
     z-index: 999;
 
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
