--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ button:hover {
     justify-content: center;
     flex-wrap: wrap;
 }
-.modal-inner-name {
+.modal-inner {
 background-color: #ffcc03;
 border: 5px solid rgb(86, 86, 247);
 box-shadow: 2px 1px 1px lightgrey;
